[profile.dev]
incremental = true
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 1
debug = false

[workspace]
resolver = "2"
members = [
  "apps/app/server",
  "apps/desktop/src-tauri",
  "apps/restate",
  "crates/*",
  "plugins/*",
]

[workspace.package]
rust-version = "1.86.0"

[workspace.dependencies]
hypr-analytics = { path = "crates/analytics", package = "analytics" }
hypr-audio = { path = "crates/audio", package = "audio" }
hypr-audio-utils = { path = "crates/audio-utils", package = "audio-utils" }
hypr-buffer = { path = "crates/buffer", package = "buffer" }
hypr-calendar-apple = { path = "crates/calendar-apple", package = "calendar-apple" }
hypr-calendar-google = { path = "crates/calendar-google", package = "calendar-google" }
hypr-calendar-interface = { path = "crates/calendar-interface", package = "calendar-interface" }
hypr-calendar-outlook = { path = "crates/calendar-outlook", package = "calendar-outlook" }
hypr-chunker = { path = "crates/chunker", package = "chunker" }
hypr-data = { path = "crates/data", package = "data" }
hypr-db-admin = { path = "crates/db-admin", package = "db-admin" }
hypr-db-core = { path = "crates/db-core", package = "db-core" }
hypr-db-script = { path = "crates/db-script", package = "db-script" }
hypr-db-user = { path = "crates/db-user", package = "db-user" }
hypr-detect = { path = "crates/detect", package = "detect" }
hypr-file = { path = "crates/file", package = "file" }
hypr-gbnf = { path = "crates/gbnf", package = "gbnf" }
hypr-gguf = { path = "crates/gguf", package = "gguf" }
hypr-host = { path = "crates/host", package = "host" }
hypr-language = { path = "crates/language", package = "language" }
hypr-llama = { path = "crates/llama", package = "llama" }
hypr-loops = { path = "crates/loops", package = "loops" }
hypr-nango = { path = "crates/nango", package = "nango" }
hypr-notification = { path = "crates/notification", package = "notification" }
hypr-notification2 = { path = "crates/notification2", package = "notification2" }
hypr-notion = { path = "crates/notion", package = "notion" }
hypr-onnx = { path = "crates/onnx", package = "onnx" }
hypr-openai = { path = "crates/openai", package = "openai" }
hypr-s3 = { path = "crates/s3", package = "s3" }
hypr-slack = { path = "crates/slack", package = "slack" }
hypr-stt = { path = "crates/stt", package = "stt", features = ["realtime", "recorded"] }
hypr-template = { path = "crates/template", package = "template" }
hypr-turso = { path = "crates/turso", package = "turso" }
hypr-vad = { path = "crates/vad", package = "vad" }
hypr-whisper = { path = "crates/whisper", package = "whisper" }
hypr-ws = { path = "crates/ws", package = "ws" }
hypr-ws-utils = { path = "crates/ws-utils", package = "ws-utils" }

hypr-auth-interface = { path = "plugins/auth-interface", package = "auth-interface" }
hypr-listener-interface = { path = "plugins/listener-interface", package = "listener-interface" }

tauri = "2"
tauri-build = "2"
tauri-plugin = "2"
tauri-plugin-decorum = "1.1.1"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"

tauri-plugin-analytics = { path = "plugins/analytics" }
tauri-plugin-auth = { path = "plugins/auth" }
tauri-plugin-connector = { path = "plugins/connector" }
tauri-plugin-db = { path = "plugins/db" }
tauri-plugin-flags = { path = "plugins/flags" }
tauri-plugin-listener = { path = "plugins/listener" }
tauri-plugin-local-llm = { path = "plugins/local-llm" }
tauri-plugin-local-stt = { path = "plugins/local-stt" }
tauri-plugin-misc = { path = "plugins/misc" }
tauri-plugin-notification = { path = "plugins/notification" }
tauri-plugin-sfx = { path = "plugins/sfx" }
tauri-plugin-sse = { path = "plugins/sse" }
tauri-plugin-store2 = { path = "plugins/store2" }
tauri-plugin-template = { path = "plugins/template" }
tauri-plugin-tray = { path = "plugins/tray" }
tauri-plugin-windows = { path = "plugins/windows" }

async-stream = "0.3.6"
futures-channel = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
reqwest = "0.12"
tokio = "1"
tokio-stream = "0.1.17"
tokio-tungstenite = "0.26.0"
tokio-util = "0.7.15"

anyhow = "1"
approx = "0.5.1"
backon = "1.4.1"
bytes = "1.9.0"
cached = "0.55.1"
codes-iso-639 = "0.1.5"
derive_more = "2"
dirs = "6.0.0"
dotenv = "0.15.0"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
include_url_macro = "0.1.0"
indoc = "2"
insta = "1.42"
itertools = "0.14.0"
lazy_static = "1.5.0"
once_cell = "1.20.3"
regex = "1.11.1"
schemars = "0.8.21"
serde = "1"
serde_bytes = "0.11.15"
serde_json = "1"
serde_qs = "0.14.0"
serial_test = "3"
statig = { version = "0.3.0" }
strum = "0.26"
tempfile = "3"
testcontainers-modules = "0.11.5"
thiserror = "2"
url = "2"
uuid = "1"

axum = "0.8.1"
tower = "0.5.2"
tower-http = "0.6.2"

chrono = "0.4.39"
chrono-tz = "0.10.1"

prost = "0.13.4"
tonic = "0.12.3"
tonic-build = "0.12.3"

async-openai = { git = "https://github.com/fastrepl/async-openai", rev = "6404d307f3f706e818ad91544dc82fac5c545aee", default-features = false }
async-stripe = { version = "0.39.1", default-features = false }
gbnf-validator = { git = "https://github.com/fastrepl/gbnf-validator", rev = "3dec055" }
graph-rs-sdk = "2.0.3"

sentry = "0.36.0"
sentry-rust-minidump = "0.10.0"

markdown = { git = "https://github.com/wooorm/markdown-rs.git", rev = "5c9eba146f06b2e0531a901cb586c0a877edb3ea" }
mdast_util_to_markdown = { git = "https://github.com/wooorm/markdown-rs.git", rev = "5c9eba146f06b2e0531a901cb586c0a877edb3ea" }
minijinja = "2.7.0"
minijinja-contrib = "2.7.0"

tracing = "0.1.41"
tracing-subscriber = "0.3.19"

apalis = "0.7.0"
apalis-cron = "0.7.0"
apalis-sql = "0.7.0"

specta = "2.0.0-rc.21"
specta-typescript = "0.0.9"
tauri-specta = "2.0.0-rc.21"

cidre = { git = "https://github.com/yury/cidre", rev = "4f0eff4" }
cpal = "0.15.3"
dasp = "0.11.0"
hound = "3.5.1"
realfft = "3.4.0"
rodio = "0.20.1"

kalosm-common = { git = "https://github.com/floneum/floneum", rev = "52967ae" }
kalosm-llama = { git = "https://github.com/floneum/floneum", rev = "52967ae" }
kalosm-model-types = { git = "https://github.com/floneum/floneum", rev = "52967ae" }
kalosm-sound = { git = "https://github.com/floneum/floneum", rev = "52967ae", default-features = false }
kalosm-streams = { git = "https://github.com/floneum/floneum", rev = "52967ae" }

deepgram = { version = "0.6.6", default-features = false }
libsql = "0.9.4"

block2 = "0.6"
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-application-services = "0.3"
objc2-core-foundation = "0.3"
objc2-foundation = "0.3"
objc2-user-notifications = "0.3"

[patch.crates-io]
cpal = { git = "https://github.com/RustAudio/cpal", rev = "51c3b43" }
